--- a/style.css
+++ b/style.css
@@ -28,6 +28,26 @@ body{
     height: 35px;
     border-radius: 5px;
 }
+#n1{
+    width: 400px;
+    height: 35px;
+    height: 35px;
+    border-radius: 5px;
+}
+#n2{
+    width: 400px;
+    height: 35px;
+    height: 35px;
+    border-radius: 5px;
+}
 #btnlogin{
     width: 200px;
+}
+#output{
+    background: white;
+    border-radius: 10px;
+    border-top: 10px solid #AA4465;
+    padding: 10px;
+    float: none;
+    text-align: left;
 }
